// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sidebar abbreviates durations under a minute 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li
        className="SidebarItem SidebarItem--all is-selected"
      >
        <a
          className="SidebarItem-link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="SidebarItem--all-name"
          >
            All
          </span>
          <span
            className="SidebarItem-alertBadge"
          >
            7
          </span>
        </a>
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/resource4"
          onClick={[Function]}
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
            title="resource4"
          >
            resource4
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:36:03.000Z"
              title="2017-12-21T15:36:03.000Z"
            >
              &lt;5s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          onClick={[Function]}
        />
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/resource9"
          onClick={[Function]}
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
            title="resource9"
          >
            resource9
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:35:58.000Z"
              title="2017-12-21T15:35:58.000Z"
            >
              &lt;15s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          onClick={[Function]}
        />
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/resource19"
          onClick={[Function]}
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
            title="resource19"
          >
            resource19
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:35:48.000Z"
              title="2017-12-21T15:35:48.000Z"
            >
              &lt;30s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          onClick={[Function]}
        />
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/resource29"
          onClick={[Function]}
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
            title="resource29"
          >
            resource29
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:35:38.000Z"
              title="2017-12-21T15:35:38.000Z"
            >
              &lt;30s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          onClick={[Function]}
        />
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/resource39"
          onClick={[Function]}
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
            title="resource39"
          >
            resource39
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:35:28.000Z"
              title="2017-12-21T15:35:28.000Z"
            >
              &lt;45s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          onClick={[Function]}
        />
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/resource49"
          onClick={[Function]}
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
            title="resource49"
          >
            resource49
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:35:18.000Z"
              title="2017-12-21T15:35:18.000Z"
            >
              &lt;1m
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          onClick={[Function]}
        />
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/resource54"
          onClick={[Function]}
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
            title="resource54"
          >
            resource54
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:35:13.000Z"
              title="2017-12-21T15:35:13.000Z"
            >
              &lt;1m
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          onClick={[Function]}
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar never shows dirty trigger button for automatic resources 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li
        className="SidebarItem SidebarItem--all is-selected"
      >
        <a
          className="SidebarItem-link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="SidebarItem--all-name"
          >
            All
          </span>
          <span
            className="SidebarItem-alertBadge"
          >
            2
          </span>
        </a>
      </li>
      <li
        className="SidebarItem"
      >
        <a
          className="SidebarItem-link"
          href="/r/vigoda"
          onClick={[Function]}
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="pending"
              style={
                Object {
                  "animation": "glow 1s linear infinite",
                }
              }
            >
              indicator-auto-pending.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
            title="vigoda"
          >
            vigoda
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:36:07.000Z"
              title="2017-12-21T15:36:07.000Z"
            >
              &lt;5s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          onClick={[Function]}
        />
      </li>
      <li
        className="SidebarItem"
      >
        <a
          className="SidebarItem-link"
          href="/r/snack"
          onClick={[Function]}
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="default"
              fill="#f6685c"
            >
              indicator-auto.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
            title="snack"
          >
            snack
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:35:57.000Z"
              title="2017-12-21T15:35:57.000Z"
            >
              &lt;15s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
           isReady"
          onClick={[Function]}
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders empty resource list without crashing 1`] = `
<section
  className="Sidebar is-closed"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li
        className="SidebarItem SidebarItem--all is-selected"
      >
        <a
          className="SidebarItem-link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="SidebarItem--all-name"
          >
            All
          </span>
          
        </a>
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders list of resources 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li
        className="SidebarItem SidebarItem--all is-selected"
      >
        <a
          className="SidebarItem-link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="SidebarItem--all-name"
          >
            All
          </span>
          <span
            className="SidebarItem-alertBadge"
          >
            2
          </span>
        </a>
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/vigoda"
          onClick={[Function]}
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
            title="vigoda"
          >
            vigoda
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:36:07.000Z"
              title="2017-12-21T15:36:07.000Z"
            >
              &lt;5s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          onClick={[Function]}
        />
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/snack"
          onClick={[Function]}
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
            title="snack"
          >
            snack
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:35:57.000Z"
              title="2017-12-21T15:35:57.000Z"
            >
              &lt;15s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          onClick={[Function]}
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar renders resources that haven't been built yet 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li
        className="SidebarItem SidebarItem--all is-selected"
      >
        <a
          className="SidebarItem-link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="SidebarItem--all-name"
          >
            All
          </span>
          <span
            className="SidebarItem-alertBadge"
          >
            2
          </span>
        </a>
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/vigoda"
          onClick={[Function]}
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
            title="vigoda"
          >
            vigoda
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo empty"
          >
            —
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          onClick={[Function]}
        />
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/snack"
          onClick={[Function]}
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
            title="snack"
          >
            snack
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo empty"
          >
            —
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          onClick={[Function]}
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar shows ready + dirty trigger button for manual resource with pending changes 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li
        className="SidebarItem SidebarItem--all is-selected"
      >
        <a
          className="SidebarItem-link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="SidebarItem--all-name"
          >
            All
          </span>
          <span
            className="SidebarItem-alertBadge"
          >
            2
          </span>
        </a>
      </li>
      <li
        className="SidebarItem"
      >
        <a
          className="SidebarItem-link"
          href="/r/vigoda"
          onClick={[Function]}
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="pending"
              style={
                Object {
                  "animation": "glow 1s linear infinite",
                }
              }
            >
              indicator-auto-pending.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
            title="vigoda"
          >
            vigoda
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:36:07.000Z"
              title="2017-12-21T15:36:07.000Z"
            >
              &lt;5s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
           isReady isDirty"
          onClick={[Function]}
        />
      </li>
      <li
        className="SidebarItem"
      >
        <a
          className="SidebarItem-link"
          href="/r/snack"
          onClick={[Function]}
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="default"
              fill="#f6685c"
            >
              indicator-auto.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
            title="snack"
          >
            snack
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:35:57.000Z"
              title="2017-12-21T15:35:57.000Z"
            >
              &lt;15s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
           isReady"
          onClick={[Function]}
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar trigger button not ready if resource is building 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li
        className="SidebarItem SidebarItem--all is-selected"
      >
        <a
          className="SidebarItem-link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="SidebarItem--all-name"
          >
            All
          </span>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
        </a>
      </li>
      <li
        className="SidebarItem SidebarItem--building"
      >
        <a
          className="SidebarItem-link"
          href="/r/vigoda"
          onClick={[Function]}
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="building"
              style={
                Object {
                  "animation": "spin 1s linear infinite",
                }
              }
            >
              indicator-auto-building.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
            title="vigoda"
          >
            vigoda
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo "
          >
            <time
              dateTime="2017-12-21T15:36:07.000Z"
              title="2017-12-21T15:36:07.000Z"
            >
              &lt;5s
            </time>
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          onClick={[Function]}
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;

exports[`sidebar trigger button not ready if resource waiting for first build 1`] = `
<section
  className="Sidebar"
>
  <nav
    className="Sidebar-resources"
  >
    <ul
      className="Sidebar-list"
    >
      <li
        className="SidebarItem SidebarItem--all is-selected"
      >
        <a
          className="SidebarItem-link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="SidebarItem--all-name"
          >
            All
          </span>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
        </a>
      </li>
      <li
        className="SidebarItem"
      >
        <a
          className="SidebarItem-link"
          href="/r/vigoda"
          onClick={[Function]}
        >
          <div
            className="SidebarIcon"
          >
            <svg
              className="pending"
              style={
                Object {
                  "animation": "glow 1s linear infinite",
                }
              }
            >
              indicator-auto-pending.svg
            </svg>
          </div>
          <p
            className="SidebarItem-name"
            title="vigoda"
          >
            vigoda
          </p>
          <span
            className="SidebarItem-alertBadge"
          >
            1
          </span>
          <span
            className="SidebarItem-timeAgo empty"
          >
            —
          </span>
        </a>
        <button
          className="SidebarTriggerButton 
          "
          onClick={[Function]}
        />
      </li>
    </ul>
  </nav>
  <button
    className="Sidebar-toggle"
    onClick={null}
  >
    <svg>
      chevron.svg
    </svg>
     Collapse
  </button>
</section>
`;
